# my_lib

./: .gitignore  CMakeLists.txt  README.md
AVL_tree/: AVL_tree.c  AVL_tree.h  CMakeLists.txt
Linked_list/: CMakeLists.txt  Linked_list.c  Linked_list.h  main.c
Mathematica_project/: CMakeLists.txt  Matrix.h  Matrix_implementation.h  Vector.h  Vector_implementation.h  main.cpp
Number/: CMakeLists.txt  Number.c  Number.h  Number_test.c  main.c
arbitrary_precision_number/: CMakeLists.txt  main.c  number.c  number.h
bpm/: graph_in_bpm.c  graph_in_bpm.h  tmp_bpm.c
fourier_series/: fs.c
fourier_series/test_fs/: test_fs.c
history/: CMakeLists.txt  README.md  main.c
history/Number_2 заебался лучше с нуля/: Number.c  Number.h  Number_test.c  main.c
history/arbitrary_precision_number/: main.c  number.c  number.h
history/bpm/: README.md
history/fourier_series/: fs.h
history/integratef/: N_dim_MK.c
history/matrix/: CMakeLists.txt  Matrix.c  Matrix_functions.c  Matrix_functions.h  mat.txt
history/numerical_series/: cs
history/ode/: ode_RK_solutor.h
integratef/: integratef.c  integratef.h
integratef/test_for_integratef/: test.c
interpolation/: interpolate.c  interpolate.cpp  interpolate.h
matrix/: CMakeLists.txt  Matrix.c  Matrix.h  Matrix_functions.c  Matrix_functions.h  main.c
numerical_series/: count_series.c  count_series.h
ode/: README.md  RESULT  ode_RK_solutor.c  ode_RK_solutor.h
